--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,14 @@
         android:theme="@style/Theme.AcmeGradeFinalAssessment"
         tools:targetApi="31">
         <activity
-            android:name=".BillingSummaryActivity"
+            android:name=".presentation.activity.OrderPlacedActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".presentation.activity.BillingSummaryActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
